<!--
  ~ Created by Sebastian Paciorek on 9.3.2019
  ~ Copyright (c) 2019.  All rights reserved.
  ~ Last modified 09.03.19 16:13
  -->

<resources>
    <string name="app_name">Tickets</string>
	<string name="choose_method_title">Sposób sterowania</string>
    <string name="tickets_title">Bilety</string>
    <string name="buy_ticket_title">Kup bilet</string>
    <string name="ticket_control_title">Kontrola biletów</string>
	<string name="ticket_control_details">Szczegóły biletu</string>
    <string name="buy_ticket_choice_title">Wybór biletów</string>
    <string name="discount_ticket_title">Ulgowe</string>
    <string name="normal_ticket_title">Normalne</string>
	<string name="error_get_tickets_json_message">Wystąpił błąd przy pobieraniu biletów</string>
	<string name="payment_method_title">Metoda płatności</string>
	<string name="payment_method_mastercard_title">Mastercard</string>
	<string name="payment_method_masterpass_title">Masterpass</string>
	<string name="payment_method_visa_title">VISA</string>
	<string name="summary_title">Podsumowanie</string>
	<string name="buy_and_pay_title">Kupuję i płacę</string>
	<string name="payment_title">Płatność</string>
	<string name="author">inż. Sebastian Paciorek</string>
	<string name="button_start_title">Start</string>
	<string name="button_about_app_title">O aplikacji</string>
	<string name="gesture_sensor_error_title">Wystąpił bład przy odczycie ruchu z sensora</string>
	<string name="gesture_loading_info_title">Rozpoczęto przechodzenie do aktywności z zaznaczonym elementem \nWykonaj dynamiczny ruch frontem ekranu do siebie by zmienić </string>
	<string name="gesture_sensor_return_title">Wróć</string>
	<string name="speech_recognition_available">Rozpoznawanie mowy jest dostępne na tym urządzeniu</string>
	<string name="speech_recognition_unavailable">Rozpoznawanie mowy nie jest dostępne na tym urządzeniu</string>
	<string name="accepted_confidence">0.5</string>
	<string name="internet_not_connected_title">Brak lub słabe połączenie z siecią Internet</string>
	<string name="speech_error_no_match_title">Nie rozpoznano\nSpróbuj ponownie</string>
	<string name="speech_network_error_message">Wystąpił błąd związany z siecią</string>
	<string name="speech_no_match_error_message">Nie znaleziono dopasowania</string>
	<string name="speech_network_timeout_error_message">Przekroczono limit czasu sieci</string>
	<string name="speech_insufficient_permission_error_message">Brak wymaganych pozwoleń do rozpoznawania mowy</string>
	<string name="speech_client_side_error_message">Błąd po stronie klienta</string>
	<string name="speech_audio_recording_error_message">Błąd nagrywania dźwięku</string>
	<string name="speech_recognition_service_busy_error_message">Serwis rozpoznawania mowy jest już zajęty</string>
	<string name="speech_error_from_server_message">Błąd po stronie serwera</string>
	<string name="speech_no_speech_input_error__message">Nie wykryto mowy. Spróbuj mówić głośniej i wyraźniej</string>

	<string name="speech_on_ready_for_speech_message">Nasłuchuję...</string>
	<string name="speech_beginning_of_speech_message">Wykryto rozpoczęcie mówienia</string>
	<string name="speech_end_of_speech_message">Wykryto zakończenie mówienia</string>
	<string name="speech_checking_for_results_message">Przetwarzam mowę...</string>
	<string name="speech_results_checked_error_message">Nie dopasowano do możliwych wyborów\nSpróbuj ponownie</string>
	<string name="speech_results_checked_success_message">Znaleziono dopasowanie</string>
	<string name="speech_loading_info_title">Przechodzenie do aktywności z zaznaczonym elementem</string>
	<string name="speech_ticket_control_warning_title">Wybór biletu nie został zaimplementowany celowo.\n Wybrać można tylko opcję WRÓĆ</string>

	<string name="about_google_drive_link">https://drive.google.com/open?id=1El6tIUnhyYxmmL3YRQCsA1lHwG1M3YQ5</string>
	
	<string-array name="ticket_20min_match_sequence">
		<item>20 minutowy</item>
		<item>20-minutowy</item>
		<item>dwudziestominutowy</item>
	</string-array>

	<string-array name="ticket_75min_match_sequence">
		<item>75 minutowy</item>
		<item>75-minutowy</item>
		<item>siedemdziesięciopięciominutowy</item>
	</string-array>

	<string-array name="ticket_90min_match_sequence">
		<item>90 minutowy</item>
		<item>90-minutowy</item>
		<item>dziewięćdziesięciominutowy</item>
	</string-array>

	<!-- Colors for gesture module-->

	<string name="selected_button_color">#008577</string>
	<string name="unselected_button_color">#FFE4E4E4</string>
	<string name="selected_recycler_view_item_color">#008577</string>
	<string name="unselected_recycler_view_item_color">#FAFAFA</string>

	<!-- Choose method activity -->

	<string name="choose_method_title_touch">DOTYK</string>
	<string name="choose_method_title_gesture">GESTY</string>
	<string name="choose_method_title_speech">MOWA</string>

	<string name="choose_method_description_touch">Sterowanie odbywa się za pomocą dotyku</string>
	<string name="choose_method_description_gesture">Sterowanie odbywa się za pomocą wykorzystania akcelerometru i zdefiniowanych gestów przy ruchu telefonu</string>
	<string name="choose_method_description_speech">Sterowanie odbywa się za pomocą rozpoznawania mowy</string>

    <string name="discount_tickets_json">[
		{
			\"name\": \"Bilet 20 min. Strefa 1 i 2\",
			\"price\": \"1,70 PLN\"},
		{
			\"name\": \"Bilet jednorazowy przesiadkowy 75 min. Strefa 1\",
			\"price\": \"2,20 PLN\"
		},
		{
			\"name\": \"Bilet jednorazowy przesiadkowy 90 min. Strefa 1 i 2\",
			\"price\": \"3,50 PLN\"
		},
		{
			\"name\": \"Bilet dobowy. Strefa 1\",
			\"price\": \"7,50 PLN\"
		},
		<!--{-->
			<!--\"name\": \"Bilet dobowy. Strefa 1 i 2\",-->
			<!--\"price\": \"13,00 PLN\"-->
		<!--},-->
		{
			\"name\": \"Bilet weekendowy. Strefa 1 i 2\",
			\"price\": \"12,00 PLN\"
		},
		{
			\"name\": \"Bilet 3-dniowy. Strefa 1\",
			\"price\": \"18,00 PLN\"
		},
		<!--{-->
			<!--\"name\": \"Bilet 3-dniowy. Strefa 1 i 2\",-->
			<!--\"price\": \"28,50 PLN\"-->
		<!--},-->
		{
			\"name\": \"Bilet jednorazowy przesiadkowy 75 min. dla 10 osób. Strefa 1\",
			\"price\": \"22,00 PLN\"
		}
	]
    </string>

	<string name="normal_tickets_json">[
		{
			\"name\": \"Bilet 20 min. Strefa 1 i 2\",
			\"price\": \"3,40 PLN\"},
		{
			\"name\": \"Bilet jednorazowy przesiadkowy 75 min. Strefa 1\",
			\"price\": \"4,40 PLN\"
		},
		{
			\"name\": \"Bilet jednorazowy przesiadkowy 90 min. Strefa 1 i 2\",
			\"price\": \"7,00 PLN\"
		},
		{
			\"name\": \"Bilet dobowy. Strefa 1\",
			\"price\": \"15,00 PLN\"
		},
		<!--{-->
			<!--\"name\": \"Bilet dobowy. Strefa 1 i 2\",-->
			<!--\"price\": \"26,00 PLN\"-->
		<!--},-->
		{
			\"name\": \"Bilet weekendowy. Strefa 1 i 2\",
			\"price\": \"24,00 PLN\"
		},
		{
			\"name\": \"Bilet weekendowy grupowy. Strefa 1 i 2\",
			\"price\": \"40,00 PLN\"
		},
		{
			\"name\": \"Bilet 3-dniowy. Strefa 1\",
			\"price\": \"36,00 PLN\"
		}
		<!--,-->
		<!--{-->
			<!--\"name\": \"Bilet 3-dniowy. Strefa 1 i 2\",-->
			<!--\"price\": \"57,00 PLN\"-->
		<!--}-->
	]
    </string>

</resources>
