<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Sebastian Paciorek on 7.3.2019
  ~ Copyright (c) 2019.  All rights reserved.
  ~ Last modified 06.03.19 23:55
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="sth"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/aboutAppButton"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppButton" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/aboutAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="@string/button_about_app_title"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/author"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="@string/button_start_title"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_nameTextView" />

    <TextView
        android:id="@+id/app_nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:cropToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/authorTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpButton"
        app:srcCompat="@drawable/ic_bus" />
</android.support.constraint.ConstraintLayout>