<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Sebastian Paciorek on 7.3.2019
  ~ Copyright (c) 2019.  All rights reserved.
  ~ Last modified 06.03.19 23:55
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/buy_ticket_progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buy_ticket_progress_infotextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gesture_loading_info_title"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy_ticket_progressBar" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gesture_discount_ticketButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLightGray"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="@string/discount_ticket_title"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gesture_normal_ticketButton" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gesture_normal_ticketButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorLightGray"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="@string/normal_ticket_title"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gesture_buy_ticket_details_returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy_ticket_progress_infotextView" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gesture_buy_ticket_details_returnButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorLightGray"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="@string/gesture_sensor_return_title"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>