<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Sebastian Paciorek on 7.3.2019
  ~ Copyright (c) 2019.  All rights reserved.
  ~ Last modified 07.03.19 11:38
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/speech_main_internetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:editable="false"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/internet_not_connected_title"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/speech_main_listening_actions_infotextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speech_main_internetTextView" />

    <TextView
        android:id="@+id/speech_main_listening_error_infotextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speech_main_listening_actions_infotextView" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/speech_main_ticket_controlButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLightGray"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="@string/ticket_control_title"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speech_main_buy_ticketButton" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/speech_main_buy_ticketButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorLightGray"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:soundEffectsEnabled="true"
        android:text="@string/buy_ticket_title"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speech_main_internetTextView" />

</android.support.constraint.ConstraintLayout>